--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -232,28 +232,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!---------$$$$$$$--------->
 
 
-
-
 <div class="alert alert-success">
 <h5 class="alert-heading">В стоимость входит:</h5>
 <ul class="list-group list-group-flush">
 <li class="list-group-item list-group-item-success">
-транспортное обслуживание;
+вход в Лимонарий;
 </li>
 <li class="list-group-item list-group-item-success " >
-проживание — 1 ночь в усадьбе ;
+экскурсия-рассказ о Лимонном саде;
 </li>
 <li class="list-group-item list-group-item-success " >
-питание: ужин и завтрак (домашняя украинская кухня);
+1 кг вкуснейших лимонов с собой каждому (лимоны можно кушать без сахара);
 </li>
 <li class="list-group-item list-group-item-success " >
-банный релакс (2 ч);
-</li>
-<li class="list-group-item list-group-item-success " >
-обзорная экскурсия в Полтаве (3 ч);
-</li>
-<li class="list-group-item list-group-item-success " >
-сопровождение. 
+магнит от "Нового поворота".
 </li>
 </ul>
 </div>
@@ -262,10 +254,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <h5 class="alert-heading">В стоимость не входит:</h5>
 <ul class="list-group list-group-flush">
 <li class="list-group-item list-group-item-danger " >
-прокат лыжного снаряжения и скипасс на подъемники ;
+проезд до места собора на экскурсию и обратно;
 </li>
 <li class="list-group-item list-group-item-danger " >
-обеды в первый и во второй дни.
+личные расходы.
 </li>
 <ul>
              </div>
