--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -165,11 +165,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<li><span class="fa fa-tags mr-2"></span>Стоимость: <span>230 Грн.</span></li> 
             </ul>
             <div class="alert alert-success">
-	       <p> В стоимость входит 1 кг лимонов с собой. 
+	        В стоимость входит 1 кг лимонов с собой. 
                   180 грн 0-12 лет (в стоимость входит 0.5 кг 
                    лимонов с собой), цена для семей от 2 человек
                     с детьми, стоимость указана за 1 человека.
-               </p>
             </div>
              <ul class="listing">
 		<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li> 
