--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -218,11 +218,33 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
       <div class="card-body txt-alg-jf">
           
-12:45* время сбора группы на экскурсию. Сбор в р-не 9 больницы Правый берег, дополнительную информацию сбрасываем за 2-3 дня до тура всем кто записался и оплатил экскурсию 50%. (как всегда оплата через расчетный счет в течении суток после брони)
-13:00 после небольшой пешей прогулки мы на месте. Проходим частную территорию и попадаем в Лимонарий! Удивительный уголок солнечно -лимонного счастья. Слушаем историю создания этого чуда. Обязательно делаем фото на память среди лимонных ветвей! Длительность экскурсии +время для фото всего: 45 минут.
-Получаем с сбой заряд бодрости и витамина С в виде 1 кг лимончиков с собой и довольные отправляться к родным и близким делиться впечатлениями, фото и вкусными лимонами!
-Желательно удобную обувь! В Лимонарии температура всего на пару грудусов больше чем на улице, одевайтесь теплее.
-*время начала окончания экскурсии указаны предварительные, они могут быть изменены в зависимости от состава группы, без изменения указанной программы! Группы от 7 до 16 человек, возможен заказ индивидуальных экскурсий от 6 до 9 человек по цене 265 грн/чел.
+        <p><b>12:45*</b> время сбора группы на экскурсию. 
+             Сбор в районе 9-й больницы, Правый берег,
+             дополнительную информацию сбрасываем за 2-3 дня
+             до тура всем кто записался и оплатил экскурсию 50%. 
+             (как всегда оплата через расчетный счет в течении суток после брони)</p>
+         <p><b>13:00</b> после небольшой пешей прогулки мы на месте. 
+             Проходим частную территорию и попадаем в Лимонарий! 
+              Удивительный уголок солнечно-лимонного счастья. 
+              Слушаем историю создания этого чуда. Обязательно 
+              делаем фото на память среди лимонных ветвей!
+              Длительность экскурсии и время для фото всего: 45 минут.
+              Получаем с сбой заряд бодрости и витамина С в виде 1 кг 
+              лимончиков с собой и довольные отправляться к родным и
+              близким делиться впечатлениями, фото и вкусными лимонами!
+          </p>
+          <p>Желательно на экскурсию подготовить удобную обувь!
+            В Лимонарии температура всего на пару грудусов больше
+            чем на улице, одевайтесь теплее.
+           </p><br/><hr>
+           <p><i>
+             *время начала окончания экскурсии указаны 
+               предварительные, они могут быть изменены в 
+                зависимости от состава группы, без изменения 
+                указанной программы! Группы от 7 до 16 человек, 
+             возможен заказ индивидуальных экскурсий от 6 до 9 
+             человек по цене 265 грн/чел.
+            </i></p>
       </div>
     </div>
   </div>
