--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -157,7 +157,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               города Запорожья. Мы посетим удивительное место, узнаем
               историю семьи которая растит эти чудо-лимоны, сделаем 
               фото среди лимонных ветвей. А чтоб не грустить дома
-              без вкусностей, каждый получит <b>1 кг</b> вкуснейших
+              без вкусностей, каждый получит <span class="badge badge-warning"><b>1 кг</b></span> вкуснейших
               лимонов с собой!
             </p>
             <hr>
