--- a/index.html
+++ b/index.html
@@ -294,12 +294,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<!--  Лимонарий Запорожье | экскурсия в Лимонный сад с Новым поворотом  -->
 			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-5">
 				<div class="image-tour position-relative">
-					<img src="images/2021 Лим 2550 на 1700.jpg" alt="Лимонарий" class="img-fluid" />
+                                      <a href="https://novi-povorot.pp.ua/page-Limonariy.html">
+					  <img src="images/2021 Лим 2550 на 1700.jpg" alt="Лимонарий" class="img-fluid" />
+                                      </a>
 					<p><span class="fa fa-tags"></span> <span>230грн.</span></p>
 				</div>
 				<div class="package-info">
 					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
-					<h5 class="my-2">Лимонарий</h5>
+					<h5 class="my-2">
+                                          <a href="https://novi-povorot.pp.ua/page-Limonariy.html">
+                                            Лимонарий
+                                           </a>
+                                         </h5>
 					<p class="">Экскурсия в Лимонный сад с Новым поворотом </p>
 					<ul class="listing mt-3">
 						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li> 
@@ -342,7 +348,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
 				<h4 class="destination mb-3">Лимонарий</h4>
 				<div class="image-position position-relative">
+                                     <a href="https://novi-povorot.pp.ua/page-Limonariy.html">
 					<img src="images/2021 Лим 2550 на 2910.jpg" class="img-fluid" alt="Лимонарий">
+                                      </a>
 					<div class="rating">
 						<ul>
 							<li><span class="fa fa-star"></span></li>
