--- a/packages.html
+++ b/packages.html
@@ -180,7 +180,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-lg-3 col-sm-6 mb-5">
 				<div class="image-tour position-relative">
-					<img src="images/2021 Лим 2550 на 1700.jpg" alt="" class="img-fluid" />
+                                      <a href="https://novi-povorot.pp.ua/page-Limonariy.html">
+					<img src="images/2021 Лим 2550 на 1700.jpg" alt="Лимонарий" class="img-fluid" />
+                                      </a>
 					<p><span class="fa fa-tags"></span> <span>20$</span></p>
 				</div>
 				<div class="package-info">
@@ -206,7 +208,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
 				<h4 class="destination mb-3">Лимонарий</h4>
 				<div class="image-position position-relative">
+                                     <a href="https://novi-povorot.pp.ua/page-Limonariy.html">
 					<img src="images/2021 Лим 2550 на 2910.jpg" class="img-fluid" alt="">
+                                      </a>
 					<div class="rating">
 						<ul>
 							<li><span class="fa fa-star"></span></li>
