--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -238,10 +238,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             чем на улице, одевайтесь теплее.
            </p><br/><hr>
            <p><i>
-             *время начала окончания экскурсии указаны 
-               предварительные, они могут быть изменены в 
-                зависимости от состава группы, без изменения 
-                указанной программы! Группы от 7 до 16 человек, 
+             *время начала и окончания экскурсии указаны 
+             предварительные, они могут быть изменены в 
+             зависимости от состава группы, без изменения 
+             указанной программы! Группы от 7 до 16 человек, 
              возможен заказ индивидуальных экскурсий от 6 до 9 
              человек по цене 265 грн/чел.
             </i></p>
