--- a/page-Beer.html
+++ b/page-Beer.html
@@ -99,3 +99,197 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </style>
 </head>
 <body>
+<!-- header -->
+<header>
+	<div class="container">
+		<!-- nav -->
+		<nav class="py-md-4 py-3 d-lg-flex">
+			<div id="logo">
+				<h1 class="mt-md-0 mt-2"> <a href="index.html"><span class="fa fa-map-signs"></span> Новый поворот </a></h1>
+			</div>
+			<label for="drop" class="toggle"><span class="fa fa-bars"></span></label>
+			<input type="checkbox" id="drop" />
+                        <ul class="menu ml-auto mt-1">
+				<li class=""><a href="index.html">Главная</a></li>
+				<li class=""><a href="about.html"> О Нас </a></li>
+				<!--<li class=""><a href="services.html">Сервисы</a></li>-->
+				<li class=""><a href="packages.html">Туры</a></li>
+				<li class=""><a href="contact.html">Контакты</a></li>
+				<li class="booking"><a href="booking.html">Забронировать</a></li>
+			</ul>
+		</nav>
+		<!-- //nav -->
+	</div>
+</header>
+<!-- //header -->
+
+<!-- banner -->
+<section class="banner_inner" id="home">
+	<div class="banner_inner_overlay">
+	</div>
+</section>
+<!-- //banner -->
+<!--single page-->
+  <section class="single page py-lg-4 py-md-3 py-sm-3 py-3" id="single-page">
+    <div class="container py-lg-5 py-md-4 py-sm-4 py-3">
+      <div class="row">
+
+        <div class="col-lg-4 main-title-text">
+          <h3 class="title">Лимонарий</h3>
+        </div>
+        <div class="col-lg-8 blog-left-sub">
+          <img src="images/2021 Лим 2550 на 2910.jpg" alt="news image" class="img-fluid">
+          <div class="blog-two-two">
+            <div class="blog-date-time mb-2">
+              <ul class="listing mt-3">
+                <li>
+                  <span class="fa fa-calendar mr-2"></span>Дата: <span>13 Февраля 2021 Года</span>
+                </li>
+              </ul>
+            </div>
+            <h4 class="mb-3">
+              Экскурсия в Лимонный сад
+            </h4>
+            <p>
+              Яркие сочные лимончики висящие на ветках,
+              интересно, экзотично и необычно ведь мы не 
+              в Сицилии или Грузии, а частном Лимонном саду
+              города Запорожья. Мы посетим удивительное место, узнаем
+              историю семьи которая растит эти чудо-лимоны, сделаем 
+              фото среди лимонных ветвей. А чтоб не грустить дома
+              без вкусностей, каждый получит <span class="badge badge-warning"><b>1 кг</b></span> вкуснейших
+              лимонов с собой!
+            </p>
+            <hr>
+            <ul class="listing">
+		<li><span class="fa fa-tags mr-2"></span>Стоимость: <span>230 Грн.</span></li> 
+            </ul>
+            <div class="alert alert-warning mt-3">
+	        В стоимость входит 1 кг лимонов с собой. 
+                  180 грн 0-12 лет (в стоимость входит 0.5 кг 
+                   лимонов с собой), цена для семей от 2 человек
+                    с детьми, стоимость указана за 1 человека.
+            </div>
+             <ul class="listing">
+		<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li> 
+	     </ul>
+            <br>
+            <p>
+              Не забудь своих друзей, в большой компании всегда веселей!
+            </p>
+          <p>
+             Бронирование билетов осуществляется заранеe: </p>
+          <div class="page-booking-btn mt-1 mb-1">
+              <button type="button" class="btn btn-outline-primary"> <a href="https://novi-povorot.pp.ua/booking.html">Забронировать</a> </button>
+          </div>
+           <p>
+             Присоединяйтесь к сообществу в социальных сетях:
+
+            <ul class="social_section_1info mt-1 mb-1">
+		<li class="mb-2 facebook"><a href="https://www.facebook.com/groups/novipovorot/"><span class="fa fa-facebook"></span></a></li>
+		<li class="mb-2 instagram"><a href="https://www.instagram.com/dovgalyv.zp/"><span class="fa fa-instagram"></span></a></li>
+		<li class="viber">
+		   <a href="https://invite.viber.com/?g2=AQAI6YLBmgfH7kiQ8udTUV2l%2BFIhhpFkz60dsKyAsnZiA6r%2FOtLLImR2o3mLR9Bp"> 
+			<svg id="Bold" fill="white" enable-background="new 0 0 24 24" height="13" viewBox="0 0 24 24" width="13" xmlns="http://www.w3.org/2000/svg">
+				<path  d="m23.155 13.893c.716-6.027-.344-9.832-2.256-11.553l.001-.001c-3.086-2.939-13.508-3.374-17.2.132-1.658 1.715-2.242 4.232-2.306 7.348-.064 3.117-.14 8.956 5.301 10.54h.005l-.005 2.419s-.037.98.589 1.177c.716.232 1.04-.223 3.267-2.883 3.724.323 6.584-.417 6.909-.525.752-.252 5.007-.815 5.695-6.654zm-12.237 5.477s-2.357 2.939-3.09 3.702c-.24.248-.503.225-.499-.267 0-.323.018-4.016.018-4.016-4.613-1.322-4.341-6.294-4.291-8.895.05-2.602.526-4.733 1.93-6.168 3.239-3.037 12.376-2.358 14.704-.17 2.846 2.523 1.833 9.651 1.839 9.894-.585 4.874-4.033 5.183-4.667 5.394-.271.09-2.786.737-5.944.526z"/>
+				<path  d="m12.222 4.297c-.385 0-.385.6 0 .605 2.987.023 5.447 2.105 5.474 5.924 0 .403.59.398.585-.005h-.001c-.032-4.115-2.718-6.501-6.058-6.524z"/>
+				<path  d="m16.151 10.193c-.009.398.58.417.585.014.049-2.269-1.35-4.138-3.979-4.335-.385-.028-.425.577-.041.605 2.28.173 3.481 1.729 3.435 3.716z"/>
+				<path  d="m15.521 12.774c-.494-.286-.997-.108-1.205.173l-.435.563c-.221.286-.634.248-.634.248-3.014-.797-3.82-3.951-3.82-3.951s-.037-.427.239-.656l.544-.45c.272-.216.444-.736.167-1.247-.74-1.337-1.237-1.798-1.49-2.152-.266-.333-.666-.408-1.082-.183h-.009c-.865.506-1.812 1.453-1.509 2.428.517 1.028 1.467 4.305 4.495 6.781 1.423 1.171 3.675 2.371 4.631 2.648l.009.014c.942.314 1.858-.67 2.347-1.561v-.007c.217-.431.145-.839-.172-1.106-.562-.548-1.41-1.153-2.076-1.542z"/>
+				<path  d="m13.169 8.104c.961.056 1.427.558 1.477 1.589.018.403.603.375.585-.028-.064-1.346-.766-2.096-2.03-2.166-.385-.023-.421.582-.032.605z"/>
+			</svg>
+		   </a>
+		</li>
+		<li class="telegram"><a href="tg://resolve?domain=Dovgal_YV"><span class="fa fa-paper-plane"></span></a></li>
+            </ul>
+           
+           </p>
+<!------------$$$$$$----------->
+
+<div class="accordion mt-3 mb-3" id="accordionExample">
+  <div class="card">
+    <div class="card-header" id="headingOne">
+      <h5 class="mb-0">
+        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+          Описание экскурсии в Лимонарий
+        </button>
+      </h5>
+    </div>
+
+    <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+      <div class="card-body txt-alg-jf">
+          
+        <p><b>12:45*</b> время сбора группы на экскурсию. 
+             Сбор в районе 9-й больницы, Правый берег,
+             дополнительную информацию сбрасываем за 2-3 дня
+             до тура всем кто записался и оплатил экскурсию 50%. 
+             (как всегда оплата через расчетный счет в течении суток после брони)</p>
+         <p><b>13:00</b> после небольшой пешей прогулки мы на месте. 
+             Проходим частную территорию и попадаем в Лимонарий! 
+              Удивительный уголок солнечно-лимонного счастья. 
+              Слушаем историю создания этого чуда. Обязательно 
+              делаем фото на память среди лимонных ветвей!
+              Длительность экскурсии и время для фото всего: 45 минут.
+              Получаем с сбой заряд бодрости и витамина С в виде 1 кг 
+              лимончиков с собой и довольные отправляться к родным и
+              близким делиться впечатлениями, фото и вкусными лимонами!
+          </p>
+          <p>Желательно на экскурсию подготовить удобную обувь!
+            В Лимонарии температура всего на пару грудусов больше
+            чем на улице, одевайтесь теплее.
+           </p><br/><hr>
+           <p><i>
+             *время начала и окончания экскурсии указаны 
+             предварительные, они могут быть изменены в 
+             зависимости от состава группы, без изменения 
+             указанной программы! Группы от 7 до 16 человек, 
+             возможен заказ индивидуальных экскурсий от 6 до 9 
+             человек по цене 265 грн/чел.
+            </i></p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!---------$$$$$$$--------->
+
+
+<div class="alert alert-success">
+<h5 class="alert-heading">В стоимость входит:</h5>
+<ul class="list-group list-group-flush">
+<li class="list-group-item list-group-item-success">
+вход в Лимонарий;
+</li>
+<li class="list-group-item list-group-item-success " >
+экскурсия-рассказ о Лимонном саде;
+</li>
+<li class="list-group-item list-group-item-success " >
+1 кг вкуснейших лимонов с собой каждому (лимоны можно кушать без сахара);
+</li>
+<li class="list-group-item list-group-item-success " >
+магнит от "Нового поворота".
+</li>
+</ul>
+</div>
+
+<div class="alert alert-danger">
+<h5 class="alert-heading">В стоимость не входит:</h5>
+<ul class="list-group list-group-flush">
+<li class="list-group-item list-group-item-danger " >
+проезд до места собора на экскурсию и обратно;
+</li>
+<li class="list-group-item list-group-item-danger " >
+личные расходы.
+</li>
+<ul>
+             </div>
+          </div>
+        </div>
+      </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--//single page-->
+
+
+
