--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </section>
 <!-- //how to book -->
 
-<!-- tour packages -->
+<!-- tour packages Туры-->
 <section class="packages py-5">
 	<div class="container py-lg-4 py-sm-3">
 		<h3 class="heading text-capitalize text-center" data-aos="zoom-in"> Откройте Для Себя Наши Туры</h3>
@@ -241,7 +241,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<!--  Париж, Франция. | Париж, Франция. -->
 			<div class="col-lg-3 col-sm-6">
 				<div class="image-tour position-relative">
-					<img src="images/p1.jpg" alt="" class="img-fluid" />
+					<img src="images/beer-mini.jpg" alt="" class="img-fluid" />
 					<p><span class="fa fa-tags"></span> <span>20$</span></p>
 				</div>
 				<div class="package-info">
@@ -393,9 +393,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 			</div>
 			<div class="col-md-3 col-sm-6 col-6 destinations-grids text-center mt-md-0 mt-4">
-				<h4 class="destination mb-3">Япония</h4>
+				<h4 class="destination mb-3">Пиво</h4>
 				<div class="image-position position-relative">
-					<img src="images/japan.jpg" class="img-fluid" alt="">
+					<img src="images/beer-max.jpg" class="img-fluid" alt="">
 					<div class="rating">
 						<ul>
 							<li><span class="fa fa-star"></span></li>
