--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </section>
 <!-- //how to book -->
 
+
 <!-- tour packages Туры-->
 <section class="packages py-5">
 	<div class="container py-lg-4 py-sm-3">
@@ -245,11 +246,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<p><span class="fa fa-tags"></span> <span>20$</span></p>
 				</div>
 				<div class="package-info">
-					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Париж, Франция.</h6>
+					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
 					<h5 class="my-2">Sodales vel mauris</h5>
 					<p class="">Vestibulum tellus neque, et velit mauris at, augue.</p>
 					<ul class="listing mt-3">
-						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>10 Дней</span></li> 
+						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li> 
 					</ul>
 				</div>
 			</div>
