--- a/index.html
+++ b/index.html
@@ -238,22 +238,24 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<h3 class="heading text-capitalize text-center" data-aos="zoom-in"> Откройте Для Себя Наши Туры</h3>
 		<p class="text mt-2 mb-5 text-center">Vestibulum tellus neque, sodales vel mauris at, rhoncus finibus augue. Vestibulum urna ligula, molestie at ante ut, finibus vulputate felis.</p>
 		<div class="row">
-			<!--  Париж, Франция. | Париж, Франция. -->
+			<!--  Пиво -->
 			<div class="col-lg-3 col-sm-6">
 				<div class="image-tour position-relative">
 					<img src="images/beer-mini.jpg" alt="" class="img-fluid" />
-					<p><span class="fa fa-tags"></span> <span>20$</span></p>
+					<p><span class="fa fa-tags"></span> <span>195грн.</span></p>
 				</div>
 				<div class="package-info">
 					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
-					<h5 class="my-2">Sodales vel mauris</h5>
-					<p class="">Vestibulum tellus neque, et velit mauris at, augue.</p>
+					<h5 class="my-2">Натуральное пиво</h5>
+					<p class="">
+                                          Экскурсия и дегустация в частной пивоварне
+                                        </p>
 					<ul class="listing mt-3">
 						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li> 
 					</ul>
 				</div>
 			</div>
-			<!--  //Париж, Франция.  -->
+			<!--  //Пиво -->
 			
 			<!--  Лос-Анджелес, США. | Лос-Анджелес, США. -->
 			<div class="col-lg-3 col-sm-6">
