--- a/packages.html
+++ b/packages.html
@@ -78,13 +78,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			
 			<div class="col-lg-3 col-sm-6 mb-5">
 				<div class="image-tour position-relative">
-					<img src="images/p1.jpg" alt="" class="img-fluid" />
-					<p><span class="fa fa-tags"></span> <span>20$</span></p>
+					<img src="images/beer-mini.jpg" alt="Пиво" class="img-fluid" />
+					<p><span class="fa fa-tags"></span> <span>195грн.</span></p>
 				</div>
 				<div class="package-info">
-					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Париж, Франция.</h6>
-					<h5 class="my-2">Sodales vel mauris</h5>
-					<p class="">Vestibulum tellus neque, et velit mauris at, augue.</p>
+					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+					<h5 class="my-2">Натуральное пиво</h5>
+					<p class="">
+                                          Экскурсия и дегустация в частную пивоварню
+                                        </p>
 					<ul class="listing mt-3">
 						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>10 Дней</span></li> 
 					</ul>
