--- a/page-Beer.html
+++ b/page-Beer.html
@@ -138,37 +138,34 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <h3 class="title">Пиво</h3>
         </div>
         <div class="col-lg-8 blog-left-sub">
-          <img src="images/2021 Лим 2550 на 2910.jpg" alt="news image" class="img-fluid">
+          <img src="images/page-beer.jpg" alt="news image" class="img-fluid">
           <div class="blog-two-two">
             <div class="blog-date-time mb-2">
               <ul class="listing mt-3">
                 <li>
-                  <span class="fa fa-calendar mr-2"></span>Дата: <span>13 Февраля 2021 Года</span>
+                  <span class="fa fa-calendar mr-2"></span>Дата: <span>14 и 23 Февраля 2021 Года</span>
                 </li>
               </ul>
             </div>
             <h4 class="mb-3">
-              Экскурсия в Лимонный сад
+              Экскурсия и дегустация в частную пивоварню. 
             </h4>
             <p>
-              Яркие сочные лимончики висящие на ветках,
-              интересно, экзотично и необычно ведь мы не 
-              в Сицилии или Грузии, а частном Лимонном саду
-              города Запорожья. Мы посетим удивительное место, узнаем
-              историю семьи которая растит эти чудо-лимоны, сделаем 
-              фото среди лимонных ветвей. А чтоб не грустить дома
-              без вкусностей, каждый получит <span class="badge badge-warning"><b>1 кг</b></span> вкуснейших
-              лимонов с собой!
+              Вишневое, травяное, облепихово-медовое, 
+              терново-медовое, фирменное светлое и темное пиво!
+              Вкуснейшее пиво на частной пивоварне! Мы узнаем
+              как проходит процесс создания этих пивных шедевров.
+              Побываем на экскурсии в самой пивоварне, а после
+              продегустируем 6 видов вкуснейшего натурального 
+              пива под аккомпанемент мясной и рыбной закуски!
             </p>
             <hr>
             <ul class="listing">
-		<li><span class="fa fa-tags mr-2"></span>Стоимость: <span>230 Грн.</span></li> 
+		<li><span class="fa fa-tags mr-2"></span>Стоимость: <span>195 Грн.</span></li> 
             </ul>
-            <div class="alert alert-warning mt-3">
-	        В стоимость входит 1 кг лимонов с собой. 
-                  180 грн 0-12 лет (в стоимость входит 0.5 кг 
-                   лимонов с собой), цена для семей от 2 человек
-                    с детьми, стоимость указана за 1 человека.
+            <div class="alert alert-danger mt-3">
+	        Tолько от 18 лет! Количество мест ограничено! 
+                Запись уже открыта!
             </div>
              <ul class="listing">
 		<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li> 
@@ -218,33 +215,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
       <div class="card-body txt-alg-jf">
           
-        <p><b>12:45*</b> время сбора группы на экскурсию. 
-             Сбор в районе 9-й больницы, Правый берег,
-             дополнительную информацию сбрасываем за 2-3 дня
-             до тура всем кто записался и оплатил экскурсию 50%. 
-             (как всегда оплата через расчетный счет в течении суток после брони)</p>
-         <p><b>13:00</b> после небольшой пешей прогулки мы на месте. 
-             Проходим частную территорию и попадаем в Лимонарий! 
-              Удивительный уголок солнечно-лимонного счастья. 
-              Слушаем историю создания этого чуда. Обязательно 
-              делаем фото на память среди лимонных ветвей!
-              Длительность экскурсии и время для фото всего: 45 минут.
-              Получаем с сбой заряд бодрости и витамина С в виде 1 кг 
-              лимончиков с собой и довольные отправляться к родным и
-              близким делиться впечатлениями, фото и вкусными лимонами!
-          </p>
-          <p>Желательно на экскурсию подготовить удобную обувь!
-            В Лимонарии температура всего на пару грудусов больше
-            чем на улице, одевайтесь теплее.
-           </p><br/><hr>
-           <p><i>
-             *время начала и окончания экскурсии указаны 
-             предварительные, они могут быть изменены в 
-             зависимости от состава группы, без изменения 
-             указанной программы! Группы от 7 до 16 человек, 
-             возможен заказ индивидуальных экскурсий от 6 до 9 
-             человек по цене 265 грн/чел.
-            </i></p>
+        17:50 - сбор группы и после минутки позитива пешая прогулка до места начала экскурсии!
+18:00 -18:40 - экскурсия по частной пивоварне. МЫ увидим варочный и бродильный цеха, почувствуем дух хмеля и солода. Узнаем секреты ручной варки пива!
+18:40-19:15 дегустация 6 видов вкуснейшего натурального пива. Сваренного на уже полюбившейся пивоварне: травяное, пшеничное, облепихово-медовое, синяя борода(сухой стаут) и конечно фирменное светлое и темное пиво!
+Под закуску из балыка из карпа, бастурмы, сыровяленой колбаски и вяленого мяса вы ощутите весь аромат и вкус самого лучшего пива!
+По окончании экскурсии и дегустации все желающие смогут приобрести себе понравившейся вид пива со скидкой 10% 
+
       </div>
     </div>
   </div>
@@ -257,13 +233,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <h5 class="alert-heading">В стоимость входит:</h5>
 <ul class="list-group list-group-flush">
 <li class="list-group-item list-group-item-success">
-вход в Лимонарий;
+экскурсия по частной пивоварне;
 </li>
 <li class="list-group-item list-group-item-success " >
-экскурсия-рассказ о Лимонном саде;
+дегустация 6 видов пива и небольшая мясная и рыбная закуска;
 </li>
 <li class="list-group-item list-group-item-success " >
-1 кг вкуснейших лимонов с собой каждому (лимоны можно кушать без сахара);
+скидка 10% при покупке пива в пивоварне в день экскурсии;
+</li>
+<li class="list-group-item list-group-item-success " >
+сопровождение от представителя Нового поворота;
 </li>
 <li class="list-group-item list-group-item-success " >
 магнит от "Нового поворота".
@@ -275,10 +254,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <h5 class="alert-heading">В стоимость не входит:</h5>
 <ul class="list-group list-group-flush">
 <li class="list-group-item list-group-item-danger " >
-проезд до места собора на экскурсию и обратно;
+питание, доп расходы;
 </li>
 <li class="list-group-item list-group-item-danger " >
-личные расходы.
+проезд до места начала экскурсии и обратно ;
 </li>
 <ul>
              </div>
