--- a/page-Beer.html
+++ b/page-Beer.html
@@ -207,7 +207,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="card-header" id="headingOne">
       <h5 class="mb-0">
         <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          Описание экскурсии в Лимонарий
+          Описание экскурсии и дигустации в частной пивоварне
         </button>
       </h5>
     </div>
