--- a/page-Beer.html
+++ b/page-Beer.html
@@ -164,7 +164,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<li><span class="fa fa-tags mr-2"></span>Стоимость: <span>195 Грн.</span></li> 
             </ul>
             <div class="alert alert-danger mt-3">
-	        Tолько от 18 лет! Количество мест ограничено! 
+	        Tолько <span class="badge badge-danger"><b>18+</b></span> Количество мест ограничено! 
                 Запись уже открыта!
             </div>
              <ul class="listing">
