--- a/page-Beer.html
+++ b/page-Beer.html
@@ -214,13 +214,28 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
     <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
       <div class="card-body txt-alg-jf">
-          
-        17:50 - сбор группы и после минутки позитива пешая прогулка до места начала экскурсии!
-18:00 -18:40 - экскурсия по частной пивоварне. МЫ увидим варочный и бродильный цеха, почувствуем дух хмеля и солода. Узнаем секреты ручной варки пива!
-18:40-19:15 дегустация 6 видов вкуснейшего натурального пива. Сваренного на уже полюбившейся пивоварне: травяное, пшеничное, облепихово-медовое, синяя борода(сухой стаут) и конечно фирменное светлое и темное пиво!
-Под закуску из балыка из карпа, бастурмы, сыровяленой колбаски и вяленого мяса вы ощутите весь аромат и вкус самого лучшего пива!
-По окончании экскурсии и дегустации все желающие смогут приобрести себе понравившейся вид пива со скидкой 10% 
-
+          <p>
+        <b>17:50</b> - сбор группы и после минутки 
+          позитива пешая прогулка до места начала 
+          экскурсии! </p>
+        <p><b>18:00 - 18:40</b> - экскурсия 
+          по частной пивоварне. МЫ увидим варочный 
+          и бродильный цеха, почувствуем дух хмеля 
+          и солода. Узнаем секреты ручной варки пива!</p>
+        <p><b>18:40-19:15</b> дегустация 6 видов
+          вкуснейшего натурального пива. Сваренного 
+          на уже полюбившейся пивоварне: травяное, 
+          пшеничное, облепихово-медовое, синяя 
+          борода (сухой стаут) и конечно фирменное
+          светлое и темное пиво! Под закуску из 
+          балыка из карпа, бастурмы, сыровяленой
+          колбаски и вяленого мяса вы ощутите весь 
+          аромат и вкус самого лучшего пива!</p><br/><hr/>
+         <p>
+           По окончании экскурсии и дегустации 
+           все желающие смогут приобрести себе 
+            понравившейся вид пива со скидкой 10%.
+         </p>
       </div>
     </div>
   </div>
