--- a/page-Beer.html
+++ b/page-Beer.html
@@ -138,7 +138,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <h3 class="title">Пиво</h3>
         </div>
         <div class="col-lg-8 blog-left-sub">
-          <img src="images/page-beer.jpg" alt="news image" class="img-fluid">
+          <img src="images/beer-max.jpg" alt="news image" class="img-fluid">
           <div class="blog-two-two">
             <div class="blog-date-time mb-2">
               <ul class="listing mt-3">
@@ -148,7 +148,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               </ul>
             </div>
             <h4 class="mb-3">
-              Экскурсия и дегустация в частную пивоварню. 
+              Экскурсия и дегустация в частную пивоварню
             </h4>
             <p>
               Вишневое, травяное, облепихово-медовое, 
