--- a/page-Beer.html
+++ b/page-Beer.html
@@ -232,9 +232,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           колбаски и вяленого мяса вы ощутите весь 
           аромат и вкус самого лучшего пива!</p><br/><hr/>
          <p>
-           По окончании экскурсии и дегустации 
+          <i> *По окончании экскурсии и дегустации 
            все желающие смогут приобрести себе 
-            понравившейся вид пива со скидкой 10%.
+            понравившейся вид пива со скидкой 10%.</i>
          </p>
       </div>
     </div>
