--- a/page-Beer.html
+++ b/page-Beer.html
@@ -269,7 +269,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <h5 class="alert-heading">В стоимость не входит:</h5>
 <ul class="list-group list-group-flush">
 <li class="list-group-item list-group-item-danger " >
-питание, доп расходы;
+питание и дополнительные расходы;
 </li>
 <li class="list-group-item list-group-item-danger " >
 проезд до места начала экскурсии и обратно ;
