--- a/booking.html
+++ b/booking.html
@@ -111,7 +111,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<option>Тур</option>
 								<option>Полтава</option>
                                                                 <option>Лимонарий</option>
-								<option>США</option>
+								<option>Натуральное пиво</option>
 								<option>Франция</option>
 								<option>Турция</option>
 								<option>Грузия</option>
