--- a/index.html
+++ b/index.html
@@ -241,12 +241,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<!--  Пиво -->
 			<div class="col-lg-3 col-sm-6">
 				<div class="image-tour position-relative">
-					<img src="images/beer-mini.jpg" alt="" class="img-fluid" />
+                                      <a href="https://novi-povorot.pp.ua/page-Beer.html">
+					<img src="images/beer-mini.jpg" alt="Пиво" class="img-fluid" />
+                                       </a>
 					<p><span class="fa fa-tags"></span> <span>195грн.</span></p>
 				</div>
 				<div class="package-info">
 					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
-					<h5 class="my-2">Натуральное пиво</h5>
+					<h5 class="my-2">
+                                         <a href="https://novi-povorot.pp.ua/page-Beer.html">
+                                          Натуральное пиво
+                                          </a>
+                                         </h5>
 					<p class="">
                                           Экскурсия и дегустация в частной пивоварне
                                         </p>
