--- a/index.html
+++ b/index.html
@@ -403,7 +403,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-3 col-sm-6 col-6 destinations-grids text-center mt-md-0 mt-4">
 				<h4 class="destination mb-3">Пиво</h4>
 				<div class="image-position position-relative">
-					<img src="images/beer-max.jpg" class="img-fluid" alt="">
+                                       <a href="https://novi-povorot.pp.ua/page-Beer.html">
+					  <img src="images/beer-max.jpg" class="img-fluid" alt="">
+                                        </a>
 					<div class="rating">
 						<ul>
 							<li><span class="fa fa-star"></span></li>
