--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="destinations-info">
 					<div class="caption mb-lg-3">
-						<h4>Япония</h4>
+						<h4>Пиво</h4>
 						<a href="booking.html">Забронировать</a>
 					</div>
 				</div>
