--- a/packages.html
+++ b/packages.html
@@ -268,7 +268,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-3 col-sm-6 col-6 destinations-grids text-center mt-md-0 mt-4">
 				<h4 class="destination mb-3">Япония</h4>
 				<div class="image-position position-relative">
-					<img src="images/japan.jpg" class="img-fluid" alt="">
+					<a href="https://novi-povorot.pp.ua/page-Beer.html">
+					  <img src="images/beer-max.jpg" class="img-fluid" alt="">
+                                        </a>
 					<div class="rating">
 						<ul>
 							<li><span class="fa fa-star"></span></li>
@@ -281,7 +283,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="destinations-info">
 					<div class="caption mb-lg-3">
-						<h4>Япония</h4>
+						<h4>Пиво</h4>
 						<a href="booking.html">Забронировать</a>
 					</div>
 				</div>
