--- a/packages.html
+++ b/packages.html
@@ -266,7 +266,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 			</div>
 			<div class="col-md-3 col-sm-6 col-6 destinations-grids text-center mt-md-0 mt-4">
-				<h4 class="destination mb-3">Япония</h4>
+				<h4 class="destination mb-3">Пиво</h4>
 				<div class="image-position position-relative">
 					<a href="https://novi-povorot.pp.ua/page-Beer.html">
 					  <img src="images/beer-max.jpg" class="img-fluid" alt="">
