--- a/page-Beer.html
+++ b/page-Beer.html
@@ -219,7 +219,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           позитива пешая прогулка до места начала 
           экскурсии! </p>
         <p><b>18:00 - 18:40</b> - экскурсия 
-          по частной пивоварне. МЫ увидим варочный 
+          по частной пивоварне. Мы увидим варочный 
           и бродильный цеха, почувствуем дух хмеля 
           и солода. Узнаем секреты ручной варки пива!</p>
         <p><b>18:40-19:15</b> дегустация 6 видов
