--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -164,7 +164,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <ul class="listing">
 		<li><span class="fa fa-tags mr-2"></span>Стоимость: <span>230 Грн.</span></li> 
             </ul>
-            <div class="alert alert-warning mt-3">
+            <div class="alert alert-warning mt-3 txt-alg-jf">
 	        В стоимость входит 1 кг лимонов с собой. 
                   180 грн 0-12 лет (в стоимость входит 0.5 кг 
                    лимонов с собой), цена для семей от 2 человек
