--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -150,7 +150,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <h4 class="mb-3">
               Экскурсия в Лимонный сад
             </h4>
-            <p>
+            <p class="txt-alg-jf">
               Яркие сочные лимончики висящие на ветках,
               интересно, экзотично и необычно ведь мы не 
               в Сицилии или Грузии, а частном Лимонном саду
