--- a/page-Beer.html
+++ b/page-Beer.html
@@ -150,7 +150,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <h4 class="mb-3">
               Экскурсия и дегустация в частную пивоварню
             </h4>
-            <p>
+            <p class="txt-alg-jf">
               Вишневое, травяное, облепихово-медовое, 
               терново-медовое, фирменное светлое и темное пиво!
               Вкуснейшее пиво на частной пивоварне! Мы узнаем
