--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -152,7 +152,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <h4 class="mb-3">
               Лыжные покатухи и колоритный хутор в Полтаве
             </h4>
-            <p>
+            <p class="txt-alg-jf">
               Колоритный Полтавский хутор с национальной едой и банькой, покатухи на лыжах, коньках и сноубордах в самом продвинутом горонолыжном комплексе с собственными снежными пушками. Экскурсия по Полтаве и просто душевный отдых! 
             </p>
             <hr>
