--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -199,7 +199,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="card-header" id="headingOne">
       <h5 class="mb-0">
         <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          1 ДЕНЬ
+          <span class="fa fa-angle-right"></span>  Описание экскурсии: День 1
         </button>
       </h5>
     </div>
@@ -241,7 +241,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="card-header" id="headingTwo">
       <h5 class="mb-0">
         <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          2 ДЕНЬ
+          <span class="fa fa-angle-right"></span>  Описание экскурсии: День 2
         </button>
       </h5>
     </div>
