--- a/page-Beer.html
+++ b/page-Beer.html
@@ -161,14 +161,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               пива под аккомпанемент мясной и рыбной закуски!
             </p>
             <hr>
-            <ul class="listing">
-		<li><span class="fa fa-tags mr-2"></span>Стоимость: <span>195 Грн.</span></li> 
-            </ul>
             <div class="alert alert-danger mt-3">
 	      <span class="fa fa-exclamation-triangle"></span> Внимание!<br/> <span class="badge badge-danger"><b>18+</b></span> Количество мест ограничено! 
                 Запись уже открыта!
             </div>
-             <ul class="listing">
+            <ul class="listing">
+		<li><span class="fa fa-tags mr-2"></span>Стоимость: <span>195 Грн.</span></li> 
+            <!-- </ul>
+            
+             <ul class="listing"> -->
 		<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li> 
 	     </ul>
             <br>
