--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -162,11 +162,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </p>
             <hr>
              <div class="alert alert-warning mt-3 txt-alg-jf">
-                <span class="fa fa-exclamation-triangle"></span> Внимание!<br/>
-	        В стоимость входит 1 кг лимонов с собой. 
+                <span class="fa fa-exclamation-triangle" style="text-indent: none;"></span> Внимание!<br/>
+	        <span style="text-indent: 1.5em;">В стоимость входит 1 кг лимонов с собой. 
                   180 грн 0-12 лет (в стоимость входит 0.5 кг 
                    лимонов с собой), цена для семей от 2 человек
-                    с детьми, стоимость указана за 1 человека.
+                    с детьми, стоимость указана за 1 человека.</span>
             </div>
             <ul class="listing">
 		<li><span class="fa fa-tags mr-2"></span>Стоимость: <span>230 Грн.</span></li> 
