--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -161,9 +161,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               лимонов с собой!
             </p>
             <hr>
-             <div class="alert alert-warning mt-3 txt-alg-jf">
-                <span class="fa fa-exclamation-triangle" style="text-indent: none;"></span> Внимание!<br/>
-	        <span style="text-indent: 1.5em;">В стоимость входит 1 кг лимонов с собой. 
+             <div class="alert alert-warning mt-3 ">
+                <span class="fa fa-exclamation-triangle"></span> Внимание!<br/>
+	        <span class="txt-alg-jf">В стоимость входит 1 кг лимонов с собой. 
                   180 грн 0-12 лет (в стоимость входит 0.5 кг 
                    лимонов с собой), цена для семей от 2 человек
                     с детьми, стоимость указана за 1 человека.</span>
