--- a/index.html
+++ b/index.html
@@ -263,18 +263,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<!--  //Пиво -->
 			
-			<!--  Лос-Анджелес, США. | Лос-Анджелес, США. -->
+			<!--  Турция -->
 			<div class="col-lg-3 col-sm-6">
 				<div class="image-tour position-relative">
-					<img src="images/p2.jpg" alt="" class="img-fluid" />
-					<p><span class="fa fa-tags"></span> <span>20$</span></p>
+					<img src="images/Turkey-mini.jpg" alt="" class="img-fluid" />
+					<p><span class="fa fa-tags"></span> <span>190$</span></p>
 				</div>
 				<div class="package-info">
-					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Лос-Анджелес, США.</h6>
-					<h5 class="my-2">Sodales vel mauris</h5>
-					<p class="">Vestibulum tellus neque, et velit mauris at, augue.</p>
+					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Турция</h6>
+					<h5 class="my-2">Походы по Турции</h5>
+					<p class="">Расписание походов по Турции...</p>
 					<ul class="listing mt-3">
-						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>10 Дней</span></li> 
+						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>8 Дней</span></li> 
 					</ul>
 				</div>
 			</div>
@@ -424,9 +424,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 			</div>
 			<div class="col-md-3 col-sm-6 col-6 destinations-grids text-center mt-md-0 mt-4">
-				<h4 class="destination mb-3">Сингапур</h4>
+				<h4 class="destination mb-3">Турция</h4>
 				<div class="image-position position-relative">
-					<img src="images/singapore.jpg" class="img-fluid" alt="">
+					<img src="images/Turkey-max.jpg" class="img-fluid" alt="">
 					<div class="rating">
 						<ul>
 							<li><span class="fa fa-star"></span></li>
@@ -439,7 +439,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="destinations-info">
 					<div class="caption mb-lg-3">
-						<h4>Сингапур</h4>
+						<h4>Турция</h4>
 						<a href="booking.html">Забронировать</a>
 					</div>
 				</div>
