--- a/packages.html
+++ b/packages.html
@@ -194,17 +194,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-lg-3 col-sm-6 mb-5">
 				<div class="image-tour position-relative">
-                                      <a href="https://novi-povorot.pp.ua/page-Limonariy.html">
-					<img src="images/2021 Лим 2550 на 1700.jpg" alt="Лимонарий" class="img-fluid" />
+                                      <a href="https://novi-povorot.pp.ua/page-Turkey.html">
+					<img src="images/Turkey-mini.jpg" alt="Лимонарий" class="img-fluid" />
                                       </a>
-					<p><span class="fa fa-tags"></span> <span>20$</span></p>
+					<p><span class="fa fa-tags"></span> <span>190$</span></p>
 				</div>
 				<div class="package-info">
-					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Париж, Франция.</h6>
-					<h5 class="my-2">Sodales vel mauris</h5>
-					<p class="">Vestibulum tellus neque, et velit mauris at, augue.</p>
+					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Турция</h6>
+					<h5 class="my-2">Походы по Турции</h5>
+					<p class="">Расписание походов по Турции...</p>
 					<ul class="listing mt-3">
-						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>10 Дней</span></li> 
+						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>8 Дней</span></li> 
 					</ul>
 				</div>
 			</div>
@@ -289,9 +289,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 			</div>
 			<div class="col-md-3 col-sm-6 col-6 destinations-grids text-center mt-md-0 mt-4">
-				<h4 class="destination mb-3">Сингапур</h4>
+				<h4 class="destination mb-3">Турция</h4>
 				<div class="image-position position-relative">
-					<img src="images/singapore.jpg" class="img-fluid" alt="">
+					<img src="images/Turkey-max.jpg" class="img-fluid" alt="">
 					<div class="rating">
 						<ul>
 							<li><span class="fa fa-star"></span></li>
@@ -304,7 +304,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="destinations-info">
 					<div class="caption mb-lg-3">
-						<h4>Сингапур</h4>
+						<h4>Турция</h4>
 						<a href="booking.html">Забронировать</a>
 					</div>
 				</div>
