--- a/page-Turkey.html
+++ b/page-Turkey.html
@@ -99,3 +99,33 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </style>
 </head>
 <body>
+<!-- header -->
+<header>
+	<div class="container">
+		<!-- nav -->
+		<nav class="py-md-4 py-3 d-lg-flex">
+			<div id="logo">
+				<h1 class="mt-md-0 mt-2"> <a href="index.html"><span class="fa fa-map-signs"></span> Новый поворот </a></h1>
+			</div>
+			<label for="drop" class="toggle"><span class="fa fa-bars"></span></label>
+			<input type="checkbox" id="drop" />
+                        <ul class="menu ml-auto mt-1">
+				<li class=""><a href="index.html">Главная</a></li>
+				<li class=""><a href="about.html"> О Нас </a></li>
+				<!--<li class=""><a href="services.html">Сервисы</a></li>-->
+				<li class=""><a href="packages.html">Туры</a></li>
+				<li class=""><a href="contact.html">Контакты</a></li>
+				<li class="booking"><a href="booking.html">Забронировать</a></li>
+			</ul>
+		</nav>
+		<!-- //nav -->
+	</div>
+</header>
+<!-- //header -->
+
+<!-- banner -->
+<section class="banner_inner" id="home">
+	<div class="banner_inner_overlay">
+	</div>
+</section>
+<!-- //banner -->
