--- a/page-Turkey.html
+++ b/page-Turkey.html
@@ -135,30 +135,29 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       <div class="row">
 
         <div class="col-lg-4 main-title-text">
-          <h3 class="title">Полтава</h3>
+          <h3 class="title">Турция</h3>
         </div>
         <div class="col-lg-8 blog-left-sub">
-          <img src="images/Poltava-max.jpg" alt="news image" class="img-fluid">
+          <img src="images/Turkey-max.jpg" alt="news image" class="img-fluid">
           <div class="blog-two-two">
-            <div class="blog-date-time mb-2">
+     <!--  <div class="blog-date-time mb-2">
               <ul class="listing mt-3">
                 <li>
                   <span class="fa fa-calendar mr-2"></span>Дата: <span>13-14 Февраля 2021 Года</span>
                 </li>
               </ul>
-            </div>
+            </div>-->
             <h4 class="mb-3">
-              Лыжные покатухи и колоритный хутор в Полтаве
+              Походы по Турции
             </h4>
             <p class="txt-alg-jf">
-              Колоритный Полтавский хутор с национальной едой и банькой, покатухи на лыжах, коньках и сноубордах в самом продвинутом горонолыжном комплексе с собственными снежными пушками. Экскурсия по Полтаве и просто душевный отдых! 
+               Расписание походов по Турции...
             </p>
             <hr>
             <ul class="listing">
-		<li><span class="fa fa-tags mr-2"></span>Стоимость: <span>1700 Грн.</span></li> 
-	   <!-- </ul>
-             <ul class="listing">-->
-		<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li> 
+		<li><span class="fa fa-tags mr-2"></span>Стоимость: <span>190$</span></li> 
+	   
+		<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>8 Дней</span></li> 
 	     </ul>
             <br>
             <p>
@@ -266,7 +265,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!---------$$$$$$$--------->
 
 
-
+<!--
 
 <div class="alert alert-success">
 <h5 class="alert-heading">В стоимость входит:</h5>
@@ -301,7 +300,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <li class="list-group-item list-group-item-danger " >
 обеды в первый и во второй дни.
 </li>
-<ul>
+<ul>-->
              </div>
           </div>
         </div>
