--- a/page-Turkey.html
+++ b/page-Turkey.html
@@ -189,8 +189,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </ul>
            
            </p>
+<ul class="list-group">
+  <li class="list-group-item active">  Расписание походов: </li>
+  <li class="list-group-item"> Ликийская тропа от Фетхие до Каша <br/> <span class="fa fa-calendar mr-2"></span> 14.02.2021 - 21.02.2021 </li>
+  <li class="list-group-item">   Средиземное море и античность  <br/> <span class="fa fa-calendar mr-2"></span> 20.03.2021 - 27.03.2021 </li>
+  <li class="list-group-item">   Горы, озера Даламана и море   <br/> <span class="fa fa-calendar mr-2"></span> 28.03.2021 - 04.04.2021</li>
+  <li class="list-group-item">    Ликийская тропа от Фетхие до Каша <br/> <span class="fa fa-calendar mr-2"></span> 01.05.2021 - 08.05.2021 </li>
+   <li class="list-group-item">     От Олимпуса к Средиземному морю <br/> <span class="fa fa-calendar mr-2"></span> 01.05.2021 - 08.05.2021 </li>
+  <li class="list-group-item">   Горы Улудаг, Мраморное море, Стамбул  <br/> <span class="fa fa-calendar mr-2"></span> 15.05.2021 - 21.05.2021 </li>
+  <li class="list-group-item">     Горы Улудаг, Мраморное море, Стамбул<br/> <span class="fa fa-calendar mr-2"></span> 05.06.2021 - 12.06.2021 </li>
+  <li class="list-group-item">   Горы Улудаг, Мраморное море, Стамбул <br/> <span class="fa fa-calendar mr-2"></span> 17.09.2021 - 24.09.2021 </li>
+  <li class="list-group-item">    Горы Улудаг, Мраморное море, Стамбул<br/> <span class="fa fa-calendar mr-2"></span> 09.10.2021 - 16.10.2021  </li>
+  <li class="list-group-item">  Горы, озера Даламана и море  <br/>  <span class="fa fa-calendar mr-2"></span> 20.11.2021 - 27.11.2021 </li>
+</ul>
 <!------------$$$$$$----------->
-
+<!--
 <div class="accordion mt-3 mb-3" id="accordionExample">
   <div class="card">
     <div class="card-header" id="headingOne">
@@ -261,7 +274,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
   </div>
 </div>
-
+-->
 <!---------$$$$$$$--------->
 
 
