--- a/index.html
+++ b/index.html
@@ -266,7 +266,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<!--  Турция -->
 			<div class="col-lg-3 col-sm-6">
 				<div class="image-tour position-relative">
-					<img src="images/Turkey-mini.jpg" alt="" class="img-fluid" />
+                                        <a href="https://novi-povorot.pp.ua/page-Turkey.html">
+					 <img src="images/Turkey-mini.jpg" alt="" class="img-fluid" />
+                                        </a>
 					<p><span class="fa fa-tags"></span> <span>190$</span></p>
 				</div>
 				<div class="package-info">
@@ -426,7 +428,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-3 col-sm-6 col-6 destinations-grids text-center mt-md-0 mt-4">
 				<h4 class="destination mb-3">Турция</h4>
 				<div class="image-position position-relative">
+                                      <a href="https://novi-povorot.pp.ua/page-Turkey.html">
 					<img src="images/Turkey-max.jpg" class="img-fluid" alt="">
+                                       </a>
 					<div class="rating">
 						<ul>
 							<li><span class="fa fa-star"></span></li>
