--- a/packages.html
+++ b/packages.html
@@ -201,8 +201,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="package-info">
 					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Турция</h6>
-					<h5 class="my-2">Походы по Турции</h5>
-					<p class="">Расписание походов по Турции...</p>
+					<h5 class="my-2">
+                                          <a href="https://novi-povorot.pp.ua/page-Turkey.html"> Походы по Турции</h5>
+					<p class="">Расписание походов по Турции...</a></p>
 					<ul class="listing mt-3">
 						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>8 Дней</span></li> 
 					</ul>
