--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<title>Новый поворот</title>
+<title>Полтава | Новый поворот</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8">
 <meta name="keywords" content="Grand Tour Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -31,72 +31,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
 	<link href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 	<!-- //google fonts -->
-	<style>
-           .txt-alg-jf {
-              text-align: justify;
-              text-indent: 1.5em;
-           }
-
-           .page-booking-btn>button>a {
-               color: blue;
-           }
-           .page-booking-btn>button>a:hover,
-           .page-booking-btn>button>a:active,
-           .page-booking-btn>button>a:focus {
-               color: white;
-           }
-
-           h3.title {
-              font-size: 61px;
-           }
-           @media(max-width:1080px){
-                h3.title {
-                    font-size: 58px;
-                }
-           }
-           @media(max-width:900px){
-                h3.title {
-                    font-size: 52px;
-                }
-           }
-           @media(max-width:768px){
-                h3.title {
-                    font-size: 48px;
-                }
-           }
-           @media(max-width:667px){
-                h3.title {
-                    font-size: 44px;
-                }
-           }
-           @media(max-width:600px){
-                h3.title {
-                    font-size: 40px;
-                }
-           }
-           @media(max-width:568px){
-                h3.title {
-                    font-size: 30px;
-                    letter-spacing: 2px;
-                }
-           }
-           @media(max-width:440px){
-                h3.title {
-                    font-size: 25px;
-                }
-           }
-           @media(max-width:375px){
-                h3.title {
-                    font-size: 20px;
-                }
-           }
-           @media(max-width:320px){
-                h3.title {
-                    font-size: 17px;
-                    letter-spacing: 1px;
-                }
-           }
-        </style>
+	 
 </head>
 <body>
 
